--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
             binary: x86_64-manylinux_2_28-vulkan
             container: quay.io/pypa/manylinux_2_28_x86_64
             build_args: --features binary,vulkan
-            vulkan_sdk: '1.3.239.0'
+            vulkan_sdk: '1.3.296.0'
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             binary: x86_64-windows-msvc
@@ -69,7 +69,7 @@ jobs:
             binary: x86_64-windows-msvc-vulkan
             ext: .exe
             build_args: --features vulkan,binary
-            vulkan_sdk: '1.3.280.0'
+            vulkan_sdk: '1.3.296.0'
           # - os: windows-2019
           #   target: x86_64-pc-windows-msvc
           #   binary: x86_64-windows-msvc-cuda117
@@ -138,7 +138,7 @@ jobs:
         if: runner.os == 'Windows' && matrix.windows_cuda != ''
 
       - name: Install Vulkan SDK
-        uses: icycodes/install-vulkan-sdk@v1.1.1-patch
+        uses: TabbyML/install-vulkan-sdk@v1.2.0
         with:
           version: ${{ matrix.vulkan_sdk }}
           cache: true
