--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,7 +138,7 @@ jobs:
         if: runner.os == 'Windows' && matrix.windows_cuda != ''
 
       - name: Install Vulkan SDK
-        uses: icycodes/install-vulkan-sdk@v1.1.1-patch
+        uses: TabbyML/install-vulkan-sdk@v1.2.0
         with:
           version: ${{ matrix.vulkan_sdk }}
           cache: true
