--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,7 @@ jobs:
           version: "v0.4.0"
 
       - name: Cargo registry cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.toml') }}-${{ github.sha }}
           restore-keys: |
@@ -138,7 +138,7 @@ jobs:
         if: runner.os == 'Windows' && matrix.windows_cuda != ''
 
       - name: Install Vulkan SDK
-        uses: icycodes/install-vulkan-sdk@v1.1.1-patch
+        uses: TabbyML/install-vulkan-sdk@v1.2.0
         with:
           version: ${{ matrix.vulkan_sdk }}
           cache: true
@@ -210,7 +210,7 @@ jobs:
           version: "v0.4.0"
 
       - name: Cargo registry cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.toml') }}-${{ github.sha }}
           restore-keys: |
