--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -1,4 +1,11 @@
 {
   "name": "@ragdoll/code",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@ai-sdk/react": "^1.2.0",
+    "@mastra/client-js": "^0.1.11",
+    "ink": "^5.2.0",
+    "ink-text-input": "^6.0.0",
+    "react": "^18.0.0"
+  }
 }
