--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
     "@mastra/core": "^0.6.3",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@ragdoll/client-tools": "workspace:*"
   },
   "devDependencies": {
     "mastra": "^0.4.2"
