--- a/packages/client-tools/package.json
+++ b/packages/client-tools/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@ragdoll/client-tools",
   "private": true,
-  "main": "./src/index.ts"
+  "main": "./src/index.ts",
+  "dependencies": {
+    "@mastra/core": "^0.6.3",
+    "zod": "^3.24.2"
+  }
 }
