--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,7 @@
   "name": "@ragdoll/server",
   "private": true,
   "scripts": {
-    "dev": "mastra dev"
+    "dev": "bun run --bun mastra dev"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
