--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -7,6 +7,6 @@
     "ink": "^5.2.0",
     "ink-text-input": "^6.0.0",
     "react": "^18.0.0",
-    "@ragdoll/client-tools": "workspace:*"
+    "@ragdoll/server": "workspace:*"
   }
 }
