--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,13 +2,12 @@
   "name": "@ragdoll/server",
   "private": true,
   "scripts": {
-    "dev": "bun run --bun mastra dev"
+    "dev": "mastra dev"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
     "@mastra/core": "^0.6.3",
-    "zod": "^3.24.2",
-    "@ragdoll/client-tools": "workspace:*"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "mastra": "^0.4.2"
