--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "@ragdoll/server",
-  "private": true,
+  "name": "server",
   "scripts": {
-    "dev": "mastra dev"
+    "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
-    "@mastra/core": "^0.6.3",
-    "zod": "^3.24.2"
+    "hono": "^4.7.5"
   },
   "devDependencies": {
-    "mastra": "^0.4.2"
+    "@types/bun": "latest"
   }
 }
