--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
-    "compilerOptions": {
-      "paths": {
-        "@/*": ["./src/*"],
-      }
-    }
+  "compilerOptions": {
+    "strict": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx"
   }
+}
