--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "server",
+  "name": "@ragdoll/server",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/server.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
+    "@ragdoll/tools": "workspace:*",
+    "ai": "^4.2.0",
     "hono": "^4.7.5"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
   }
 }
