--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "ragdoll",
-    "private": true,
-    "workspaces": [
-        "packages/*"
-    ],
-    "engines": {
-        "bun": ">=1.2.5"
-    },
-    "devDependencies": {
-        "@types/bun": "^1.2.5"
-    }
+  "name": "ragdoll",
+  "private": true,
+  "workspaces": ["packages/*"],
+  "scripts": {
+    "check": "biome check --write ."
+  },
+  "engines": {
+    "bun": ">=1.2.5"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@types/bun": "^1.2.5"
+  }
 }
