--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,9 @@
       "recommended": true,
       "suspicious": {
         "noArrayIndexKey": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
