--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -11,6 +11,6 @@
   },
   "devDependencies": {
     "@ai-sdk/ui-utils": "^1.2.0",
-    "@ragdoll/server": "workspace:*"
+    "@ragdoll/tools": "workspace:*"
   }
 }
