extract tool box

--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@ragdoll/code",
   "scripts": {
-    "dev": "bun --hot src/index.tsx"
+    "dev": "bun --watch src/index.tsx"
   },
   "dependencies": {
     "@ai-sdk/react": "^1.2.0",
