--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "workspaces": ["packages/*"],
   "scripts": {
-    "check": "biome check --write ."
+    "check": "biome check --write .",
+    "prepare": "husky"
   },
   "engines": {
     "bun": ">=1.2.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/bun": "^1.2.5"
+    "@types/bun": "^1.2.5",
+    "husky": "^9.1.7"
   }
 }
