--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": ["packages/vscode-webui/src/routeTree.gen.ts"]
   },
   "formatter": {
     "enabled": true,
