--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@ragdoll/server",
   "scripts": {
-    "dev": "bun run --hot src/server.ts"
+    "dev": "vite --port 4111"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
     "hono": "^4.7.5"
+  },
+  "devDependencies": {
+    "@hono/vite-dev-server": "^0.19.0"
   }
 }
