--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
+    "npm-run-all": "^4.1.5",
     "vite": "^6.2.3",
     "vite-node": "^3.0.9",
     "vitest": "^3.0.9"
