--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -10,10 +10,14 @@
     "@mastra/client-js": "^0.1.11",
     "file-type": "^20.4.1",
     "ink": "^5.2.0",
+    "marked": "^15.0.7",
+    "marked-terminal": "^7.3.0",
     "react": "^18"
   },
   "devDependencies": {
     "@ai-sdk/ui-utils": "^1.2.0",
-    "@ragdoll/tools": "workspace:*"
+    "@ragdoll/tools": "workspace:*",
+    "@types/marked-terminal": "^6.1.1",
+    "@types/react": "^18"
   }
 }
