--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@ragdoll/tools",
   "main": "src/index.ts",
+  "scripts": {
+    "tsc": "tsc --noEmit"
+  },
   "dependencies": {
     "ai": "^4.2.0",
     "zod": "^3.24.2"
