--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
     "test": "vitest --run",
     "prepare": "husky"
   },
-  "engines": {
-    "node": ">=20"
-  },
+  "workspaces": ["packages/*"],
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.7.2",
     "vite": "^6.2.3",
-    "vite-node": "^3.0.9",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9"
   }
