--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,15 +2,12 @@
   "name": "@ragdoll/server",
   "scripts": {
     "tsc": "tsc --noEmit",
-    "dev": "vite --port 4111"
+    "dev": "bun --hot src/server.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.0",
+    "@ai-sdk/openai": "^1.3.2",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
     "hono": "^4.7.5"
-  },
-  "devDependencies": {
-    "@hono/vite-dev-server": "^0.19.0"
   }
 }
