--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "workspaces": ["packages/*"],
   "devDependencies": {
+    "@types/bun": "^1.2.6",
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
     "npm-run-all": "^4.1.5",
