--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@ragdoll/code",
   "scripts": {
+    "build": "bun build src/index.tsx --external react-devtools-core --compile --outfile ./dist/code",
     "tsc": "tsc --noEmit",
     "dev": "bun --watch src/index.tsx"
   },
