--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -31,6 +31,8 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
+    "vite": "^6.2.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^4.2.4"
   }
 }
