--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
     "dev": "bun --hot src/server.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
