--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@ai-sdk/ui-utils": "^1.2.0",
     "@ragdoll/tools": "workspace:*",
+    "@ragdoll/server": "workspace:*",
     "@types/marked-terminal": "^6.1.1",
     "@types/react": "^18"
   }
