--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ragdoll/server",
+  "main": "src/types.ts",
   "scripts": {
     "tsc": "tsc --noEmit",
     "dev": "bun --hot src/server.ts"
@@ -7,8 +8,10 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
+    "@hono/zod-validator": "^0.4.3",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "zod": "^3.24.2"
   }
 }
