--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@ragdoll/code",
   "scripts": {
-    "build": "bun build src/index.tsx --external react-devtools-core --compile --outfile ./dist/code",
+    "build": "bun build src/index.tsx --compile --outfile ./dist/code",
     "tsc": "tsc --noEmit",
     "dev": "bun --watch src/index.tsx"
   },
@@ -15,7 +15,8 @@
     "ink": "^5.2.0",
     "marked": "^15.0.7",
     "marked-terminal": "^7.3.0",
-    "react": "^18"
+    "react": "^18",
+    "react-devtools-core": "^6.1.1"
   },
   "devDependencies": {
     "@ai-sdk/ui-utils": "^1.2.0",
