--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "workspaces": ["packages/*"],
   "devDependencies": {
-    "@types/bun": "^1.2.6",
     "@biomejs/biome": "1.9.4",
+    "@types/bun": "^1.2.6",
+    "@vitest/coverage-v8": "^3.0.9",
     "husky": "^9.1.7",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.7.2",
