add ink story book to help develop code (#3)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ragdoll",
   "private": true,
   "scripts": {
-    "check": "biome check --write .",
+    "check": "npm-run-all check:default check:test",
+    "check:default": "biome check --config-path=./biome.default.json --write .",
+    "check:test": "biome check --config-path=./biome.test.json --write .",
     "test": "vitest --run",
     "tsc": "bun --filter '*' tsc",
     "build": "bun --filter '*' build",
