--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,10 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["packages/vscode-webui/src/routeTree.gen.ts", "*.test.ts"]
+    "ignore": [
+      "packages/vscode-webui/src/routeTree.gen.ts",
+      "packages/ink-storybook"
+    ]
   },
   "formatter": {
     "enabled": true,
