--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
     "@hono/zod-validator": "^0.4.3",
+    "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
     "hono": "^4.7.5",
