--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -14,6 +14,7 @@
     "@instantdb/react": "^0.17.32",
     "ai": "^4.2.0",
     "file-type": "^20.4.1",
+    "fuse.js": "^7.1.0",
     "ink": "^5.2.0",
     "marked": "^15.0.7",
     "marked-terminal": "^7.3.0",
