refactor(server): align test file name and update server config

--- a/packages/server/railway.toml
+++ b/packages/server/railway.toml
@@ -3,3 +3,5 @@ buildCommand = "bun run build"
 
 [deploy]
 startCommand = "cd packages/server && bun start"
+healthcheckPath = "/health"
+healthcheckTimeout = 100
