--- a/packages/server/railway.toml
+++ b/packages/server/railway.toml
@@ -4,4 +4,5 @@ buildCommand = "bun run build"
 [deploy]
 startCommand = "cd packages/server && bun start"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 10
+restartPolicyType = "NEVER"
