feat(code): introduce cli arguments and dev mode configuration
Introduces command-line argument parsing using  to handle flags like .
Adds an  context to manage application-wide configuration, allowing components like Chat to adjust behavior (e.g., API endpoint) based on the mode.
Refactors the entry point to accept configuration and wrap the application with .

--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "name": "@ragdoll/code",
   "scripts": {
-    "build": "bun build src/index.tsx --compile --outfile ./dist/code",
+    "build": "bun build src/cli.ts --compile --outfile ./dist/code",
     "tsc": "tsc --noEmit",
-    "dev": "bun --watch src/index.tsx",
+    "dev": "bun --watch src/cli.ts --dev",
     "storybook": "bun ../ink-storybook/src/cli/index.tsx"
   },
   "dependencies": {
