--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "@ragdoll/code",
+  "version": "0.0.1-dev",
   "scripts": {
     "build": "bun build src/cli.ts --compile --outfile ./dist/code",
     "tsc": "tsc --noEmit",
@@ -13,6 +14,7 @@
     "@inkjs/ui": "^2.0.0",
     "@instantdb/react": "^0.17.32",
     "ai": "^4.2.0",
+    "commander": "^13.1.0",
     "file-type": "^20.4.1",
     "fuse.js": "^7.1.0",
     "ink": "^5.2.0",
