feat(server): add /api/models endpoint and model selection

--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ai-sdk/provider-utils": "^2.2.1",
     "@ai-sdk/react": "^1.2.0",
+    "@hono/client": "^0.0.3",
     "@inkjs/ui": "^2.0.0",
     "@instantdb/react": "^0.17.32",
+    "@tanstack/react-query": "^5.71.1",
     "ai": "^4.2.0",
     "commander": "^13.1.0",
     "file-type": "^20.4.1",
