refactor(chat): remove unused chat component and clear message history logic feat(server): add InstantDB permissions for chat completions fix(server): update package.json scripts for schema and permissions

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,8 @@
     "dev": "bun --hot src/server.ts",
     "build": "bun build src/server.ts --outdir dist --format cjs",
     "start": "bun run dist/server.js",
-    "schema:push": "bunx instant-cli@latest push schema"
+    "push:schema": "bunx instant-cli@latest push schema",
+    "push:perms": "bunx instant-cli@latest push perms"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
