--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
     "@hono/zod-validator": "^0.4.3",
+    "@neondatabase/serverless": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
