refactor: update import paths to use package imports and improve code organization

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@ragdoll/server",
   "main": "src/index.ts",
+  "imports": {
+    "#*": ["./src/*", "./src/*.ts", "./src/*/index.ts"]
+  },
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
