--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "tsc": "tsc --noEmit",
     "dev": "bun --hot src/server.ts",
-    "start": "bun run src/server.ts",
+    "build": "bun build src/server.ts --outdir dist --target bun",
+    "start": "bun run dist/server.js",
     "db:migrate": "bunx @better-auth/cli migrate -y && bun run scripts/migrate-db-schema.ts",
     "db:genschema": "kysely-codegen --out-file ./src/db/schema.d.ts"
   },
