--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "packages/vscode-webui/src/routeTree.gen.ts",
-      "packages/ink-storybook"
-    ]
+    "ignore": ["**/*/routeTree.gen.ts", "packages/ink-storybook"]
   },
   "formatter": {
     "enabled": true,
