--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "tsc": "tsc --noEmit",
-    "dev": "bun --hot src/server.ts",
+    "dev:server": "bun --hot src/server.ts",
     "build": "bun build src/server.ts --outdir dist --target bun",
     "start": "bun run dist/server.js",
     "db:migrate": "bunx @better-auth/cli migrate -y && bun run scripts/migrate-db-schema.ts",
