--- a/packages/website/public/manifest.json
+++ b/packages/website/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Pochi",
+  "name": "Pochi",
   "icons": [
     {
       "src": "favicon.ico",
