--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,8 @@
     "dev:server": "npm start"
   },
   "dependencies": {
+    "@daveyplate/better-auth-tanstack": "^1.3.1",
+    "@daveyplate/better-auth-ui": "^1.3.11",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -30,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/react-table": "^8.21.2",
@@ -39,8 +42,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19",
+    "react-dom": "^19",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
