feat(website): add device link client to auth client

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,7 @@
     "dev:server": "npm start"
   },
   "dependencies": {
+    "@ragdoll/server": "workspace:*",
     "@daveyplate/better-auth-tanstack": "^1.3.1",
     "@daveyplate/better-auth-ui": "^1.3.11",
     "@dnd-kit/core": "^6.3.1",
