--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
+    "@better-auth/stripe": "^1.2.5",
     "@hono/zod-validator": "^0.4.3",
     "@neondatabase/serverless": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.4.4",
@@ -12,6 +13,7 @@
     "better-auth": "^1.2.5",
     "hono": "^4.7.5",
     "kysely-neon": "^1.3.0",
+    "stripe": "^18.0.0",
     "ws": "^8.18.1",
     "zod": "^3.24.2"
   },
