--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,7 +11,7 @@
     "dev:server": "npm start"
   },
   "dependencies": {
-    "@ragdoll/server": "workspace:*",
+    "@better-auth/stripe": "^1.2.5",
     "@daveyplate/better-auth-tanstack": "^1.3.1",
     "@daveyplate/better-auth-ui": "^1.3.11",
     "@dnd-kit/core": "^6.3.1",
@@ -31,6 +31,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@ragdoll/server": "workspace:*",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.71.5",
@@ -38,6 +39,7 @@
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.114.3",
+    "add": "^2.0.6",
     "better-auth": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
