--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "ai": "^4.2.0",
     "better-auth": "^1.2.5",
     "hono": "^4.7.5",
+    "kysely": "^0.27.6",
     "kysely-neon": "^1.3.0",
     "stripe": "^18.0.0",
     "ws": "^8.18.1",
