--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,8 @@
     "hono": "^4.7.5",
     "kysely": "^0.27.6",
     "kysely-neon": "^1.3.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "stripe": "^18.0.0",
     "ws": "^8.18.1",
     "zod": "^3.24.2"
