chore(db): switch from NeonDialect to PostgresDialect

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,18 +6,17 @@
     "@ai-sdk/openai": "^1.3.2",
     "@better-auth/stripe": "^1.2.5",
     "@hono/zod-validator": "^0.4.3",
-    "@neondatabase/serverless": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
     "ai": "^4.2.0",
     "better-auth": "^1.2.5",
     "hono": "^4.7.5",
     "kysely": "^0.27.6",
-    "kysely-neon": "^1.3.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
+    "pg": "^8.14.1",
+    "pg-connection-string": "^2.7.0",
     "stripe": "^18.0.0",
-    "ws": "^8.18.1",
     "zod": "^3.24.2"
   },
   "scripts": {
