--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
     "db:genschema": "kysely-codegen --out-file ./src/db/schema.d.ts"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.11",
     "kysely-codegen": "^0.18.3"
   }
 }
