fix(ci): update artifact path in release workflow to include all files

--- a/.github/workflows/release-ragdoll-code.yml
+++ b/.github/workflows/release-ragdoll-code.yml
@@ -23,6 +23,6 @@ jobs:
           allowUpdates: true
           prerelease: true
           makeLatest: false
-          artifacts: "packages/code/dist/*.tar.gz"
+          artifacts: "packages/code/dist/*"
           tag: latest
           removeArtifacts: true
