fix(ci): add repository and secret configuration to release action

--- a/.github/workflows/release-ragdoll-code.yml
+++ b/.github/workflows/release-ragdoll-code.yml
@@ -26,3 +26,5 @@ jobs:
           artifacts: "packages/code/dist/*"
           tag: latest
           removeArtifacts: true
+          repo: getpochi/code
+          secret: ${{ secrets.POCHI_GITHUB_TOKEN }}
