fix(ci): replace 'secret' with 'token' in release action configuration

--- a/.github/workflows/release-ragdoll-code.yml
+++ b/.github/workflows/release-ragdoll-code.yml
@@ -27,4 +27,4 @@ jobs:
           tag: latest
           removeArtifacts: true
           repo: getpochi/code
-          secret: ${{ secrets.POCHI_GITHUB_TOKEN }}
+          token: ${{ secrets.POCHI_GITHUB_TOKEN }}
