fix(ci): update repository URL format in release action configuration

--- a/.github/workflows/release-ragdoll-code.yml
+++ b/.github/workflows/release-ragdoll-code.yml
@@ -26,5 +26,5 @@ jobs:
           artifacts: "packages/code/dist/*"
           tag: latest
           removeArtifacts: true
-          repo: getpochi/code
+          repo: https://github.com/getpochi/code
           token: ${{ secrets.POCHI_GITHUB_TOKEN }}
