--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,6 +8,7 @@
     "@hono/zod-validator": "^0.4.3",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
+    "@slack/bolt": "^4.2.1",
     "ai": "^4.2.0",
     "better-auth": "^1.2.5",
     "hono": "^4.7.5",
