--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "@slack/bolt": "^4.2.1",
     "ai": "^4.2.0",
     "better-auth": "^1.2.5",
+    "hashids": "^2.3.0",
     "hono": "^4.7.5",
     "kysely": "^0.27.6",
     "moment": "^2.30.1",
