feat(vscode): add account settings command and authentication client (#19)
* feat(vscode): add account settings command and authentication client

* remove console.log

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -25,7 +25,13 @@
           "icon": "media/icons/refresh.svg"
         }
       ]
-    }
+    },
+    "commands": [
+      {
+        "command": "ragdoll.accountSettings",
+        "title": "Ragdoll: Account Settings"
+      }
+    ]
   },
   "description": "Ragdoll",
   "displayName": "Ragdoll",
