--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,6 +3,7 @@
   "main": "src/index.ts",
   "dependencies": {
     "ai": "^4.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "file-type": "^20.4.1"
   }
 }
