feat(auth): implement TokenStorage for managing authentication tokens (#22)
* feat(auth): implement TokenStorage for managing authentication tokens

* feat: vscode webui auth client (#29)

* feat: vscode webui auth client.

* feat: update impl vscode auth client.

* refactor: renaming.

---------

Co-authored-by: Zhiming Ma <codes.icy@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "typescript.preferences.autoImportFileExcludePatterns": [
     "./packages/server/src/db/schema.d.ts",
     "./packages/server/src/db/event.ts"
-  ]
+  ],
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  }
 }
