--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -10,10 +10,13 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@quilted/threads": "^3.1.3",
+    "@ragdoll/tools": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@types/vscode-webview": "^1.57.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
@@ -21,10 +24,10 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
-    "tailwindcss-animate": "^1.0.7",
-    "@ragdoll/tools": "workspace:*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@ragdoll/vscode-webui-bridge": "workspace: *",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
