--- a/packages/vscode-webui/tsconfig.json
+++ b/packages/vscode-webui/tsconfig.json
@@ -5,7 +5,7 @@
     "jsx": "react-jsx",
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "@types/vscode-webview"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
