--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -10,7 +10,9 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
+    "@ragdoll/server": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.114.3",
