feat(vscode-webui): integrate react-query for task management and enhance app structure

--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -15,6 +15,7 @@
     "@ragdoll/server": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.71.4",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
@@ -32,7 +33,6 @@
     "@ragdoll/vscode-webui-bridge": "workspace: *",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
