--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -14,7 +14,7 @@
         {
           "id": "ragdollWebui",
           "type": "webview",
-          "name": "Ragdoll Webui"
+          "name": "Ragdoll"
         }
       ]
     },
