--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@ragdoll/server": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
