--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@ragdoll/server",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./message-utils": "./src/lib/message-utils.ts"
+  },
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
