fix: update icon for Ragdoll in package.json

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -23,7 +23,7 @@
         {
           "id": "ragdoll",
           "title": "Ragdoll",
-          "icon": "media/icons/refresh.svg"
+          "icon": "assets/icons/terminal.svg"
         }
       ]
     },
