--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,11 +10,13 @@
     "@ai-sdk/openai": "^1.3.2",
     "@better-auth/stripe": "^1.2.7",
     "@hono/zod-validator": "^0.4.3",
+    "@octokit/app": "^15.1.6",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
     "@slack/bolt": "^4.2.1",
     "ai": "^4.2.0",
     "better-auth": "^1.2.7",
+    "eventsource": "^3.0.6",
     "hashids": "^2.3.0",
     "hono": "^4.7.5",
     "kysely": "^0.27.6",
