--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -10,6 +10,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.2.9",
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-slot": "^1.2.0",
