--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^1.2.9",
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@ragdoll/server": "workspace:*",
     "@ragdoll/tools": "workspace:*",
@@ -28,12 +29,19 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-textarea-autosize": "^8.5.9",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ragdoll/vscode-webui-bridge": "workspace: *",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react-dom": "^19.0.3",
