feat(vscode): add toolCall support (#43)
* feat(vscode): add toolCall support

* update

* refactor(tools): update ClientTools type imports and restructure tool execution logic

--- a/packages/vscode-webui-bridge/package.json
+++ b/packages/vscode-webui-bridge/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@ragdoll/vscode-webui-bridge",
   "private": true,
-  "main": "src/index.ts"
+  "main": "src/index.ts",
+  "devDependencies": {
+    "@quilted/threads": "^3.1.3"
+  }
 }
