--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@ragdoll/tools",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./node": "./src/node.ts"
+  },
   "dependencies": {
     "ai": "^4.2.0",
-    "zod": "^3.24.2",
-    "file-type": "^20.4.1"
+    "file-type": "^20.4.1",
+    "zod": "^3.24.2"
   }
 }
