--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -56,8 +56,8 @@
   "publisher": "com.getpochi",
   "scripts": {
     "watch:webui": "cd ../vscode-webui && npm run start",
-    "build": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs",
-    "watch:vscode": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --watch",
+    "build": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node",
+    "watch:vscode": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node --watch",
     "watch": "npm-run-all --parallel watch:vscode watch:webui",
     "vscode": "code --extensionDevelopmentPath=$PWD",
     "dev": "npm-run-all --parallel watch vscode",
