--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -24,7 +24,8 @@
     "marked": "^15.0.7",
     "marked-terminal": "^7.3.0",
     "react": "^18",
-    "react-devtools-core": "^4"
+    "react-devtools-core": "^4",
+    "file-type": "^20.4.1"
   },
   "devDependencies": {
     "@ai-sdk/ui-utils": "^1.2.0",
