--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -64,6 +64,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@quilted/threads": "^3.1.3"
+    "@quilted/threads": "^3.1.3",
+    "file-type": "^20.4.1"
   }
 }
