--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -14,6 +14,7 @@
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
     "@ragdoll/server": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
@@ -30,13 +31,15 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
+    "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@ragdoll/vscode-webui-bridge": "workspace:*",
