chore(vscode): add scripts for publish. (#45)
* chore(vscode): add scripts for publish.

* fix: script name.

* chore(vscode): add icon, readme, changelog.

* chore: update publisher to getpochi.

* fix: icon path.

* fix: update readme.

* fix: update publisher name.

* chore: update bun.lock.

* chore: fix launch task settings.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "type": "shell",
       "label": "watch-vscode",
-      "command": "bun --filter 'vscode' watch",
+      "command": "bun --filter 'pochi' watch",
       "group": {
         "kind": "none",
         "isDefault": true
