--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vscode",
+  "name": "pochi",
   "version": "0.0.1",
+  "description": "Ragdoll",
+  "displayName": "Ragdoll",
+  "publisher": "TabbyML",
+  "icon": "assets/icons/logo128.png",
   "main": "./dist/extension.js",
-  "devDependencies": {
-    "@ragdoll/tools": "workspace:*",
-    "@ragdoll/vscode-webui-bridge": "workspace:*",
-    "@types/vscode": "^1.99.1"
-  },
-  "activationEvents": [],
+  "license": "Ragdoll User License",
+  "activationEvents": ["onStartupFinished"],
   "contributes": {
     "views": {
       "ragdoll": [
@@ -30,7 +30,8 @@
     "commands": [
       {
         "command": "ragdoll.accountSettings",
-        "title": "Ragdoll: Account Settings"
+        "title": "Account Settings",
+        "category": "Ragdoll"
       },
       {
         "command": "ragdoll.openLoginPage",
@@ -47,24 +48,34 @@
       ]
     }
   },
-  "description": "Ragdoll",
-  "displayName": "Ragdoll",
   "engines": {
     "vscode": "^1.82.0"
   },
   "private": true,
-  "publisher": "com.getpochi",
   "scripts": {
-    "watch:webui": "cd ../vscode-webui && npm run start",
-    "build": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node",
+    "build:webui": "cd ../vscode-webui && bun run build && cpy ./dist/index.js ./dist/index.css ../vscode/assets/webview-ui",
+    "build:vscode": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node",
+    "build": "npm-run-all --parallel build:vscode build:webui",
+    "vscode:prepublish": "bun run build",
+    "vscode:package": "vsce package --no-dependencies --allow-missing-repository",
+    "vscode:publish": "vsce publish --no-dependencies --allow-missing-repository",
+    "vscode:publish-prerelease": "vsce publish --no-dependencies --allow-missing-repository --pre-release",
+    "watch:webui": "cd ../vscode-webui && bun run start",
     "watch:vscode": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node --watch",
     "watch": "npm-run-all --parallel watch:vscode watch:webui",
-    "vscode": "code --extensionDevelopmentPath=$PWD",
-    "dev": "npm-run-all --parallel watch vscode",
+    "start": "code --extensionDevelopmentPath=$PWD",
+    "dev": "npm-run-all --parallel watch start",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@quilted/threads": "^3.1.3",
     "file-type": "^20.4.1"
+  },
+  "devDependencies": {
+    "@ragdoll/tools": "workspace:*",
+    "@ragdoll/vscode-webui-bridge": "workspace:*",
+    "@types/vscode": "^1.82.0",
+    "@vscode/vsce": "^3.3.2",
+    "cpy-cli": "^5.0.0"
   }
 }
