--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -69,7 +69,8 @@
   },
   "dependencies": {
     "@quilted/threads": "^3.1.3",
-    "file-type": "^20.4.1"
+    "file-type": "^20.4.1",
+    "@vscode/ripgrep": "^1.15.11"
   },
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
