--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -14,6 +14,7 @@
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
