--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -70,6 +70,8 @@
   "dependencies": {
     "@quilted/threads": "^3.1.3",
     "file-type": "^20.4.1",
+    "fuse.js": "^7.1.0",
+    "ignore": "^7.0.4",
     "@vscode/ripgrep": "^1.15.11"
   },
   "devDependencies": {
