--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -69,10 +69,11 @@
   },
   "dependencies": {
     "@quilted/threads": "^3.1.3",
+    "@vscode/ripgrep": "^1.15.11",
     "file-type": "^20.4.1",
     "fuse.js": "^7.1.0",
     "ignore": "^7.0.4",
-    "@vscode/ripgrep": "^1.15.11"
+    "minimatch": "^10.0.1"
   },
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
