--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^1.2.9",
+    "@daveyplate/better-auth-tanstack": "^1.3.2",
     "@hono/client": "^0.0.3",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-avatar": "^1.1.7",
@@ -23,7 +24,9 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@ragdoll/server": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/query-sync-storage-persister": "^5.75.0",
     "@tanstack/react-query": "^5.71.4",
+    "@tanstack/react-query-persist-client": "^5.75.2",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
