--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -40,6 +40,7 @@
     "ai": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.487.0",
     "mdast": "^3.0.0",
     "next-themes": "^0.4.6",
@@ -54,6 +55,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-stringify": "^11.0.0",
+    "remeda": "^2.21.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
