--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^1.2.9",
     "@daveyplate/better-auth-tanstack": "^1.3.2",
     "@hono/client": "^0.0.3",
+    "@leeoniya/ufuzzy": "^1.0.18",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -40,7 +41,6 @@
     "ai": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fuse.js": "^7.1.0",
     "lucide-react": "^0.487.0",
     "mdast": "^3.0.0",
     "next-themes": "^0.4.6",
