--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -20,8 +20,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-hover-card": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@ragdoll/server": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
